<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000F03"
    tools:context=".AddGear">

    <EditText
        android:id="@+id/edtItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/item_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#388E3C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198" />

    <EditText
        android:id="@+id/edtCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/category"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#388E3C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.323" />

    <EditText
        android:id="@+id/edtQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/enter_the_quantity"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#388E3C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.451" />

    <EditText
        android:id="@+id/edtComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/enter_comments"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#388E3C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.571" />

    <Button
        android:id="@+id/btnAddGear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_gear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.746" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_campsite_commander_enter_the_following"
        android:textColor="#03A9F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/tvTotalItemsPacked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_the_total_items_packed"
        android:textColor="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.876" />
</androidx.constraintlayout.widget.ConstraintLayout>